# Xiaomi-Dafang-Software

./: .gitignore  README.md  compile.sh  compile_alsalib.sh  compile_alsatools.sh  compile_autonight.sh  compile_av.sh  compile_bftpd.sh  compile_boa.sh  compile_busybox.sh  compile_dropbear.sh  compile_elphel.sh  compile_encoder.sh  compile_htop.sh  compile_jpeg.sh  compile_jpegoptim.sh  compile_jpegturbo.sh  compile_libimpsamples.sh  compile_libpcre.sh  compile_libressl.sh  compile_lighttpd.sh  compile_live.sh  compile_live555.sh  compile_ncurses.sh  compile_openssh.sh  compile_openssl.sh  compile_opus.sh  compile_oss.sh  compile_sftp.sh  compile_upload_encoder.sh  compile_upload_libimp.sh  compile_zlib.sh  dropbearmulti  encoder  live555MediaServer  openssl-compilation.html  preconfigure_oss.sh  upload_boa.sh  upload_dropbear.sh
alsa-tools/as10k1/: Makefile.am  Makefile.in  README  as10k1.c  as10k1.h  assemble.c  configure  configure.ac  gitcompile  list.h  macro.c  output.doc  parse.c  parse.h  proto.h  types.h
alsa-tools/as10k1/examples/: Makefile  blank.asm  chorus.asm  delay.asm  emu_constants.asm  eq2.asm  eq5.asm  fir.asm  flanger.asm  sine.asm  tremolo.asm  vibrato.asm  vol_ctrl.asm
alsa-tools/echomixer/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  configure.in-gtk1  echomixer.c  gitcompile
alsa-tools/envy24control/: AUTHORS  Makefile.am  Makefile.in  README  README.profiles  config.c  configure  configure.ac  configure.in-gtk1  driverevents.c  envy24control.1  envy24control.c  envy24control.h  gitcompile  hardware.c  levelmeters.c  midi.c  midi.h  mixer.c  new_process.c  patchbay.c  profiles.c  profiles.h  strstr_icase_blank.c  volume.c
alsa-tools/hda-verb/: ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  hda-verb.c
alsa-tools/hdajackretask/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  apply-changes.c  apply-changes.h  configure  configure.ac  gitcompile  main-gtk.c  sysfs-pin-configs.c  sysfs-pin-configs.h
alsa-tools/hdajacksensetest/: Makefile.am  Makefile.in  configure  configure.ac  hdajacksensetest.c
alsa-tools/hdspconf/src/: HC_AboutText.cxx  HC_AboutText.h  HC_Aeb.cxx  HC_Aeb.h  HC_AutoSyncRef.cxx  HC_AutoSyncRef.h  HC_BreakoutCable.cxx  HC_BreakoutCable.h  HC_CardPane.cxx  HC_CardPane.h  HC_ClockSource.cxx  HC_ClockSource.h  HC_InputLevel.cxx  HC_InputLevel.h  HC_OutputLevel.cxx  HC_OutputLevel.h  HC_Phones.cxx  HC_Phones.h  HC_PrefSyncRef.cxx  HC_PrefSyncRef.h  HC_SpdifFreq.cxx  HC_SpdifFreq.h  HC_SpdifIn.cxx  HC_SpdifIn.h  HC_SpdifOut.cxx  HC_SpdifOut.h  HC_SyncCheck.cxx  HC_SyncCheck.h  HC_SystemClock.cxx  HC_SystemClock.h  HC_XpmRenderer.cxx  HC_XpmRenderer.h  Makefile.am  Makefile.in  defines.h  hdspconf.cxx  labels.cxx  labels.h  pixmaps.cxx  pixmaps.h
alsa-tools/hdsploader/: Makefile.am  Makefile.in  README  configure  configure.ac  gitcompile  hdsploader.c
alsa-tools/hdspmixer/: Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac  gitcompile  hdspmixer.desktop
alsa-tools/hdspmixer/pixmaps/: Makefile.am  Makefile.in  Slider1.xpm  Slider2.xpm  Zlmloop2.xpm  Zlmloopm2.xpm  b_blank.xpm  b_card1.xpm  b_card2.xpm  b_card3.xpm  b_mute.xpm  b_pre1.xpm  b_pre2.xpm  b_pre3.xpm  b_pre4.xpm  b_pre5.xpm  b_pre6.xpm  b_pre7.xpm  b_pre8.xpm  (+25 more)
alsa-tools/hwmixvolume/: Makefile.am  Makefile.in  README  configure  configure.ac  gitcompile  hwmixvolume
alsa-tools/ld10k1/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  ld10k1.m4  ld10k1d.in
alsa-tools/mixartloader/: Makefile.am  Makefile.in  README  configure  configure.ac  mixartloader.c
alsa-tools/pcxhrloader/: Makefile.am  Makefile.in  README  configure  configure.ac  pcxhrloader.c
alsa-tools/qlo10k1/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  gitcompile
alsa-tools/rmedigicontrol/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  configure  configure.ac  configure.in-gtk1  gitcompile  level.c  loopback.c  rmedigicontrol.c  rmedigicontrol.h
alsa-tools/sb16_csp/: Makefile.am  Makefile.in  README  configure  configure.ac  cspctl.1  cspctl.c  gitcompile
alsa-tools/sscape_ctl/: Makefile.am  Makefile.in  configure  configure.ac  gitcompile  sscape_ctl.c
alsa-tools/us428control/: Cus428Midi.cc  Cus428Midi.h  Cus428State.cc  Cus428State.h  Cus428_ctls.cc  Cus428_ctls.h  Makefile.am  Makefile.in  configure  configure.ac  us428control.cc  usbus428ctldefs.h
alsa-tools/usx2yloader/: INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac  gitcompile  tascam_fpga.in  tascam_fw.in  tascam_fw.usermap  usx2yloader.c
alsa-tools/vxloader/: Makefile.am  Makefile.in  README  configure  configure.ac  vxloader.c
boa/: CHANGES  CREDITS  Makefile.in  README  aclocal.m4  boa-0.94.14rc19-auth.patch  configure  configure.in  extra_macros.m4
boa/contrib/: README.chroot.solaris
boa/docs/: .cvsignore  Makefile.in  boa.8  boa.texi
boa/examples/: boa.conf  cgi-test.cgi  nph-test.cgi  resolver.pl
boa/extras/: alphasort.c  scandir.c  strutil.c
boa/src/: .depend  Makefile.in  access.c  access.h  alias.c  auth.c  boa.c  boa.h  buffer.c  cgi.c  cgi_header.c  compat.h  config.c  config.h.in  defines.h  escape.c  escape.h  get.c  globals.h  hash.c  index_dir.c  ip.c  log.c  mmap_cache.c  pipe.c  poll.c  queue.c  range.c  read.c  request.c  response.c  select.c  signals.c  sublog.c  timestamp.c  util.c
v4l2rtspserver-master/: .gitignore  CMakeLists.txt  compile.sh  dafang.toolchain
v4l2rtspserver-master/filter/: g711super.c  g711super.h  mylog.c  mylog.h  wave.c  wave.h
v4l2rtspserver-master/inc/: ALSACapture.h  ImpCapture.h  ImpEncoder.h  ImpJpegDeviceSource.h  soundcard.h
v4l2rtspserver-master/src/: ALSACapture.cpp  DeviceSource.cpp  H264_V4l2DeviceSource.cpp  ImpCapture.cpp  ImpEncoder.cpp  ImpJpegDeviceSource.cpp  SegmentServerMediaSubsession.cpp  ServerMediaSubsession.cpp  filt.cpp  main.cpp
v4l2rtspserver-master/v4l2wrapper/: Makefile  compile.sh
(+5954 files in other folders)
