bin_PROGRAMS = hdspconf
hdspconf_SOURCES = \
	hdspconf.cxx \
	defines.h \
	HC_CardPane.cxx \
	HC_CardPane.h \
	HC_SyncCheck.cxx \
	HC_SyncCheck.h \
	HC_SpdifFreq.cxx \
	HC_SpdifFreq.h \
	HC_AutoSyncRef.cxx \
	HC_AutoSyncRef.h \
	HC_SystemClock.cxx \
	HC_SystemClock.h \
	HC_ClockSource.cxx \
	HC_ClockSource.h \
	HC_SpdifIn.cxx \
	HC_SpdifIn.h \
	HC_SpdifOut.cxx \
	HC_SpdifOut.h \
	HC_PrefSyncRef.cxx \
	HC_PrefSyncRef.h \
	HC_Aeb.cxx \
	HC_Aeb.h \
	HC_BreakoutCable.cxx \
	HC_BreakoutCable.h \
	HC_InputLevel.cxx \
	HC_InputLevel.h \
	HC_OutputLevel.cxx \
	HC_OutputLevel.h \
	HC_Phones.cxx \
	HC_Phones.h \
	HC_XpmRenderer.cxx \
	HC_XpmRenderer.h \
	HC_AboutText.cxx \
	HC_AboutText.h \
	pixmaps.cxx \
	pixmaps.h \
	labels.cxx \
	labels.h
