bin_PROGRAMS = hdspmixer
hdspmixer_SOURCES = \
	hdspmixer.cxx \
	HDSPMixerWindow.cxx \
	HDSPMixerWindow.h \
	HDSPMixerInputs.cxx \
	HDSPMixerInputs.h \
	HDSPMixerOutputs.cxx \
	HDSPMixerOutputs.h \
	HDSPMixerPlaybacks.cxx \
	HDSPMixerPlaybacks.h \
	HDSPMixerButtons.cxx \
	HDSPMixerButtons.h \
	HDSPMixerEmpty.cxx \
	HDSPMixerEmpty.h \
	HDSPMixerOutput.cxx \
	HDSPMixerOutput.h \
	HDSPMixerIOMixer.cxx \
	HDSPMixerIOMixer.h \
	HDSPMixerSelector.cxx \
	HDSPMixerSelector.h \
	HDSPMixerPan.cxx \
	HDSPMixerPan.h \
	HDSPMixerFader.cxx \
	HDSPMixerFader.h \
	HDSPMixerGain.cxx \
	HDSPMixerGain.h \
	HDSPMixerPeak.cxx \
	HDSPMixerPeak.h \
	HDSPMixerCard.cxx \
	HDSPMixerCard.h \
	HDSPMixerCardSelector.cxx \
	HDSPMixerCardSelector.h \
	HDSPMixerMaster.cxx \
	HDSPMixerMaster.h \
	HDSPMixerView.cxx \
	HDSPMixerView.h \
	HDSPMixerPresets.cxx \
	HDSPMixerPresets.h \
	HDSPMixerMuteSolo.cxx \
	HDSPMixerMuteSolo.h \
	HDSPMixerStripData.cxx \
	HDSPMixerStripData.h \
	HDSPMixerOutputData.cxx \
	HDSPMixerOutputData.h \
	HDSPMixerPresetData.cxx \
	HDSPMixerPresetData.h \
	HDSPMixerSetup.cxx \
	HDSPMixerSetup.h \
	HDSPMixerAbout.cxx \
	HDSPMixerAbout.h \
	HDSPMixerAboutText.cxx \
	HDSPMixerAboutText.h \
	HDSPMixerMeter.cxx \
	HDSPMixerMeter.h \
	pixmaps.cxx \
	pixmaps.h \
	defines.h \
	channelmap.cxx \
	channelmap.h
	
